<resources>
    <string name="app_name">Text Recognition Demo</string>
    <string name="welcome_text">Welcome to the Text Recognition app! You can now detect text from a picture of your choice.</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="text_scanning_image">text_scanning_image</string>
    <string name="generatedText_text">The generated text will appear here.</string>
    <string name="detect_now">Detect Now</string>
    <string name="get_started">Get Started</string>
</resources>