<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="40dp">

        <ImageView
            android:id="@+id/scanning_image_view"
            android:layout_width="190dp"
            android:layout_height="190dp"
            android:contentDescription="@string/text_scanning_image"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:src="@drawable/scanner" />

        <TextView
            android:id="@+id/welcome_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:paddingTop="32dp"
            android:paddingBottom="8dp"
            android:text="@string/welcome_text"
            android:textAlignment="center"
            android:textColor="#565656"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/getStarted_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="48dp"
            android:background="@drawable/button_bg"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/get_started"
            app:backgroundTint="#3366ff" />

    </LinearLayout>
</layout>